--- a/about_page.html
+++ b/about_page.html
@@ -15,7 +15,7 @@
             <img class="logo" src="images/air_logo.png">
             <p class="name">SAIRAJ AIRWAYS</p>
             <div class="buttons">
-            <a href="home_page.html"><button class="home_button">Home</button></a>
+            <a href="index.html"><button class="home_button">Home</button></a>
             <a href="about_page.html"><button class="about_button">About</button></a>
             <a href="contact_page.html"><button class="contact_button">Contact</button></a>
             </div>
