--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="name">SAIRAJ AIRWAYS</p>
             <div class="buttons">
             <a href="login_page.html"><button class="login_button">Login</button></a>
-            <a href="home_page.html"><button class="home_button">Home</button></a>
+            <a href="index.html"><button class="home_button">Home</button></a>
             <a href="about_page.html"><button class="about_button">About</button></a>
             <a href="contact_page.html"><button class="contact_button">Contact</button></a>
             </div>
