Added Registration and booking page

--- a/login_page.html
+++ b/login_page.html
@@ -28,8 +28,11 @@
                 <p>New? Create an account! or click on LOGIN</p>
             </div>
             <div class="button_group">
-                <button class="create_acc">Create Account</button>
-                <button class="login_acc">Login</button>
+                <a href="registration.html" class="create_acc">Create Account</a>
+
+                <a href="booking.html">
+                    <button class="login_acc">Login</button>
+                </a>
 
             </div>
             
