added check-in page

--- a/booking.html
+++ b/booking.html
@@ -35,8 +35,11 @@
         <h2 style="text-align: center;">Book Flight Tickets Online</h2>
         <div class="tabs">
             <div class="tab active">Book a Flight</div>
-            <div class="tab">Check-in</div>
+            <div class="tab">
+                <a href="check_in.html" style="text-decoration: none; color: inherit;">Check-in</a>
+            </div>
         </div>
+
         <form>
             <div class="form-group">
                 <label>Trip Type</label>
