added user data and flights

--- a/login_page.html
+++ b/login_page.html
@@ -30,7 +30,7 @@
             <div class="button_group">
                 <a href="registration.html" class="create_acc">Create Account</a>
 
-                <a href="booking.html">
+                <a href="flights.html">
                     <button class="login_acc">Login</button>
                 </a>
 
