--- a/booking.html
+++ b/booking.html
@@ -22,12 +22,12 @@
 
     <div class="header">
         <img class="logo" src="images/air_logo.png">
-        <p class="name">SAIRAJ AIRWAYS</p>
+        <p class="name">CLOUDTRIP</p>
         <div class="buttons">
             <a href="login_page.html"><button class="login_button">Login</button></a>
             <a href="index.html"><button class="home_button">Home</button></a>
             <a href="about_page.html"><button class="about_button">About</button></a>
-            <a href="contact_page.html"><button class="contact_button">Contact</button></a>
+          
         </div>
     </div>
     <img class="bg_reg" src="images/booking_bg.jpeg" alt=""> 
